Fix Set/Let mixup ( from String -> OUString rework ) fdo#60752

Change-Id: I56f3e8b54d80f4575937f8515e8a8d9318353b8d